# tender

./: .gitignore  .impeccable.md  PRODUCT.md  README.md  package-lock.json  package.json
ai_gateway/: Dockerfile  README.md  pyproject.toml
ai_gateway/tender_ai_gateway/: __init__.py  fallback.py  main.py  task_profiles.py  token_tracker.py
ai_gateway/tender_ai_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai_gateway/tender_ai_gateway/api/: chat.py  credentials.py  health.py
ai_gateway/tender_ai_gateway/core/: __init__.py  config.py  threadpool_compat.py
ai_gateway/tender_ai_gateway/providers/: claude_compatible.py  openai_compatible.py
ai_gateway/tender_ai_gateway/test_support/: asgi_client.py
ai_gateway/tests/smoke/: test_fallback.py  test_gateway.py  test_task_profiles.py
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/scripts/: render_indicator_table_samples.py  render_matrix_samples.py
backend/tender_backend/: main.py
backend/tender_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/tender_backend/api/: auth.py  bid_generation.py  bid_outline.py  charts.py  companybase.py  compliance.py  deviation_table.py  drafts.py  equipment_selection.py  exports.py  files.py  health.py  master_data.py  master_data_assets.py  master_data_certificates.py  master_data_companies.py  master_data_evidence.py  master_data_financials.py  master_data_people.py  master_data_performances.py  parse.py  personnel_selection.py  post_bid.py  project_template_instances.py  projects.py  requirements.py  review.py  (+9 more)
(+775 files in other folders)
